--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.google.com/search?q=kimminju&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiPi57QxubiAhVYb30KHQ58BuQQ_AUIECgB&biw=1396&bih=686&dpr=1.38#imgrc=9U5fBPu4kqbCVM:" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://i.pinimg.com/736x/c2/2a/c8/c22ac8ba70fe925f9eb545c8197e1cd6.jpg" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
