--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://i.pinimg.com/736x/c2/2a/c8/c22ac8ba70fe925f9eb545c8197e1cd6.jpg" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
